--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="n2-bold">Number 2 - I'm one ID.</div>
+    <p class="odd large-font">Number 3 - I'm a class, but cooler!</p>
+    <div id="n4-bold">Number 4 - I'm another ID.</div>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
-</html>
+</html> 
